erDiagram
    USERS ||--o{ SHIPMENTS : "books (customer_id)"
    USERS ||--o{ SHIPMENTS : "drives (driver_id)"
    USERS ||--o{ SHIPMENT_STATUS_LOGS : "changed_by"
    USERS ||--o{ PROOF_OF_DELIVERY : "uploaded_by"
    SHIPMENTS ||--o{ SHIPMENT_STATUS_LOGS : "has history"
    SHIPMENTS ||--|| PROOF_OF_DELIVERY : "has one"

    USERS {
        uuid id PK
        varchar full_name
        varchar email UK
        varchar phone
        varchar password_hash
        varchar role "CUSTOMER|DRIVER|ADMIN"
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    SHIPMENTS {
        uuid id PK
        varchar tracking_number UK "BWN-YYYYMMDD-XXXXX"
        uuid customer_id FK
        uuid driver_id FK "nullable until assigned"
        text pickup_address
        decimal pickup_lat
        decimal pickup_lng
        text delivery_address
        decimal delivery_lat
        decimal delivery_lng
        text cargo_description
        decimal cargo_weight
        varchar truck_type "MINI|MEDIUM|LARGE"
        varchar status "8-state lifecycle"
        decimal estimated_distance_km
        decimal estimated_price
        text notes
        timestamp created_at
        timestamp updated_at
    }

    SHIPMENT_STATUS_LOGS {
        uuid id PK
        uuid shipment_id FK "ON DELETE CASCADE"
        varchar old_status "null on creation"
        varchar new_status
        uuid changed_by FK
        text note
        timestamp created_at
    }

    PROOF_OF_DELIVERY {
        uuid id PK
        uuid shipment_id FK,UK "one POD per shipment"
        varchar image_url
        varchar image_file_id "storage provider id"
        text note
        uuid uploaded_by FK
        timestamp uploaded_at
    }
